# Binary_Patcher

./: .gitignore  README.md  pyproject.toml  requirements-build.txt  requirements.txt
.github/workflows/: build.yml
scripts/: build.py
src/: apply_patch.py  binary_patcher.py  hdiffpatch_utils.py  rollback_patch.py
src/legacy/: apply_patch.py  binary_patcher.py
